--- a/app/size/update-size.html
+++ b/app/size/update-size.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="/css/styles.css" />
 
-    <title>L'ultima Cena Pizzeria! - Create Ingredient</title>
+    <title>L'ultima Cena Pizzeria! - Update Size</title>
   </head>
 
   <body>
@@ -54,16 +54,16 @@
     <div class="container">
       <!-- Notification Area -->
 
-      <div id="ingredient-alert" class="alert alert-success" role="alert">
+      <div id="size-alert" class="alert alert-success" role="alert">
         <h4 class="alert-heading">Great!</h4>
-        <p>Your ingredient was updated successfully</p>
+        <p>Your size was updated successfully</p>
       </div>
 
       <div class="jumbotron">
-        <h2 class="text-center">Update Ingredient!</h2>
+        <h2 class="text-center">Update Size!</h2>
 
-        <form id="ingredient-form">
-          <!-- INGREDIENT DATA -->
+        <form id="size-form">
+          <!-- SIZE DATA -->
 
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">ID: </label>
@@ -96,7 +96,7 @@
             </div>
           </div>
 
-          <!-- ingredient BUTTON -->
+          <!-- SIZE BUTTON -->
 
           <div class="text-center">
             <button type="submit" class="btn btn-warning btn-lg">Submit</button>
@@ -129,6 +129,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="/js/ingredient/update-ingredient.js"></script>
+    <script src="/js/size/update-size.js"></script>
   </body>
 </html>
