--- a/app/size/sizes.html
+++ b/app/size/sizes.html
@@ -40,6 +40,9 @@
             <a class="nav-link" href="/app/ingredient/ingredients.html">Ingredients</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/app/beverage/beverages.html">Beverages</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/app/size/sizes.html">Sizes</a>
           </li>
         </ul>
@@ -78,7 +81,7 @@
         <td class="col-3">${{price}}</td>
         <td class="col-3 text-center">
           <div class="text-center">
-            <a class="btn btn-success btn-sm update-size disabled" href="/app/size/update-size.html?_id={{_id}}"
+            <a class="btn btn-success btn-sm update-size" href="/app/size/update-size.html?_id={{_id}}"
               >Update</a
             >
           </div>
