--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/app/size/sizes.html">Sizes</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/app/report/reports.html">Reports</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -60,7 +63,7 @@
       </div>
 
       <div class="jumbotron">
-        <h2 class="text-center">Build your own pizza!</h2>
+        <h2 class="text-center">🍕 Build your own pizza! 🍕</h2>
 
         <form id="order-form">
           <!-- CLIENT DATA -->
