--- a/app/ingredient/ingredients.html
+++ b/app/ingredient/ingredients.html
@@ -45,6 +45,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/app/size/sizes.html">Sizes</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/app/report/reports.html">Reports</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -54,7 +57,7 @@
     <div class="container">
       <div class="jumbotron">
         <div id="ingredient-list">
-          <h2 class="text-center">Ingredients</h2>
+          <h2 class="text-center">Ingredients 🥗</h2>
           <table id="ingredients" class="table bg-white table-bordered table-hover">
             <thead class="thead-dark">
               <tr class="d-flex">
